--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,12 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #76a500;
+}
+
+a:hover,
+a:focus {
+  color: #acc300;
 }
 
 .icon {
